initial hooks to ts fun :)

--- a/src/hooks/useClickOutside/__stories__/useClickOutside.stories.mdx
+++ b/src/hooks/useClickOutside/__stories__/useClickOutside.stories.mdx
@@ -43,7 +43,15 @@ This hook is used when you want to capture click events outside of your componen
     <FunctionArgument
       name="ref"
       type="React.MutableRefObject"
-      description={<>A React <a href="https://reactjs.org/docs/hooks-reference.html#useref" target="_blank" rel="noopener noreferrer">ref</a> object.</>}
+      description={
+        <>
+          A React{" "}
+          <a href="https://reactjs.org/docs/hooks-reference.html#useref" target="_blank" rel="noopener noreferrer">
+            ref
+          </a>{" "}
+          object.
+        </>
+      }
       required
     />
     <FunctionArgument
