--- a/src/hooks/useEventListener/__stories__/useEventListener.stories.mdx
+++ b/src/hooks/useEventListener/__stories__/useEventListener.stories.mdx
@@ -43,7 +43,15 @@ Attaches a listener to any DOM event on a specific element, firing a provided ca
     <FunctionArgument
       name="ref"
       type="React.MutableRefObject"
-      description={<>A React <a href="https://reactjs.org/docs/hooks-reference.html#useref" target="_blank" rel="noopener noreferrer">ref</a> object.</>}
+      description={
+        <>
+          A React{" "}
+          <a href="https://reactjs.org/docs/hooks-reference.html#useref" target="_blank" rel="noopener noreferrer">
+            ref
+          </a>{" "}
+          object.
+        </>
+      }
     />
     <FunctionArgument
       name="callback"
@@ -54,7 +62,15 @@ Attaches a listener to any DOM event on a specific element, firing a provided ca
     <FunctionArgument
       name="eventName"
       type="string"
-      description={<>The event to listen to. See <a href="https://developer.mozilla.org/en-US/docs/Web/Events" target="_blank" rel="noopener noreferrer">a full list</a> for more info.</>}
+      description={
+        <>
+          The event to listen to. See{" "}
+          <a href="https://developer.mozilla.org/en-US/docs/Web/Events" target="_blank" rel="noopener noreferrer">
+            a full list
+          </a>{" "}
+          for more info.
+        </>
+      }
       required
     />
     <FunctionArgument
