--- a/src/hooks/useSetFocus/__stories__/useSetFocus.stories.mdx
+++ b/src/hooks/useSetFocus/__stories__/useSetFocus.stories.mdx
@@ -1,6 +1,6 @@
 import { Story, Canvas, Meta } from "@storybook/addon-docs";
 import { useRef } from "react";
-import {Button, Flex, InputField} from "../../../components";
+import { Button, Flex, InputField } from "../../../components";
 import useSetFocus from "../../useSetFocus/index";
 import { FunctionArgument, FunctionArguments } from "../../../storybook";
 import styles from "./useSetFocus.stories.module.scss";
@@ -34,9 +34,7 @@ Hook for controlling focus on specific component e.g. Input.
           <Button onClick={blur} className={styles.controlButton}>
             Blur
           </Button>
-          <div className={styles.focusLabel}>
-            Is focused: {isFocused?.toString()}
-          </div>
+          <div className={styles.focusLabel}>Is focused: {isFocused?.toString()}</div>
         </Flex>
       );
     }}
@@ -50,7 +48,15 @@ Hook for controlling focus on specific component e.g. Input.
     <FunctionArgument
       name="ref"
       type="React.MutableRefObject"
-      description={<>A React <a href="https://reactjs.org/docs/hooks-reference.html#useref" target="_blank" rel="noopener noreferrer">ref</a> object.</>}
+      description={
+        <>
+          A React{" "}
+          <a href="https://reactjs.org/docs/hooks-reference.html#useref" target="_blank" rel="noopener noreferrer">
+            ref
+          </a>{" "}
+          object.
+        </>
+      }
       required
     />
     <FunctionArgument
@@ -67,18 +73,11 @@ Hook for controlling focus on specific component e.g. Input.
 </FunctionArguments>
 
 ## Returns
+
 <FunctionArguments>
   <FunctionArgument name="result" type="Object">
     <FunctionArgument name="isFocused" type="bool" description="Is the element focused or not." />
-    <FunctionArgument
-      name="focus"
-      type="() => void"
-      description="Function for focusing the element."
-    />
-    <FunctionArgument
-      name="blur"
-      type="() => void"
-      description="Function for blurring the element."
-    />
+    <FunctionArgument name="focus" type="() => void" description="Function for focusing the element." />
+    <FunctionArgument name="blur" type="() => void" description="Function for blurring the element." />
   </FunctionArgument>
 </FunctionArguments>
