--- a/src/hooks/useGridKeyboardNavigation/__stories__/useGridKeyboardNavigation.stories.mdx
+++ b/src/hooks/useGridKeyboardNavigation/__stories__/useGridKeyboardNavigation.stories.mdx
@@ -91,7 +91,7 @@ export const ON_CLICK = action("item selected");
   <FunctionArgument name="options" type="Object">
     <FunctionArgument
       name="ref"
-      type="React.MutableRefObject"
+      type="React.MutableRefObject<HTMLElement>"
       description={
         <>
           A React{" "}
