--- a/src/components/Clickable/__stories__/Clickable.stories.mdx
+++ b/src/components/Clickable/__stories__/Clickable.stories.mdx
@@ -32,7 +32,7 @@ An accessibility helper component, this component simulates a button on non butt
 </Canvas>
 
 ## Props
-<ArgsTable of={ Clickable } />
+<ArgsTable story="Overview"  />
 
 ## Variants
 ### States
