--- a/src/components/DatePicker/__stories__/datepicker.stories.mdx
+++ b/src/components/DatePicker/__stories__/datepicker.stories.mdx
@@ -3,23 +3,29 @@ import moment from "moment";
 import DatePickerComponent from "../DatePicker";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
-import { TEXT_FIELD,DROPDOWN,DIALOG_CONTENT_CONTAINER } from "../../../storybook/components/related-components/component-description-map";
+import {
+  TEXT_FIELD,
+  DROPDOWN,
+  DIALOG_CONTENT_CONTAINER
+} from "../../../storybook/components/related-components/component-description-map";
 import "./DatePicker.stories.scss";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
 
 export const metaSettings = createStoryMetaSettings({
-  component: DatePicker,
+  component: DatePicker
 });
 
 export const DatePicker = props => {
   const [date, setDate] = useState(props.range ? {} : null);
-  return <DialogContentContainer className={'datepicker-dialog-content-container'}>
-    {props.range ? (
-    <DatePickerComponent date={date.startDate} endDate={date.endDate} onPickDate={d => setDate(d)} {...props} />
-  ) : (
-    <DatePickerComponent date={date} onPickDate={d => setDate(d)} {...props}/>
-  )}
- </DialogContentContainer>
+  return (
+    <DialogContentContainer className={"datepicker-dialog-content-container"}>
+      {props.range ? (
+        <DatePickerComponent date={date.startDate} endDate={date.endDate} onPickDate={d => setDate(d)} {...props} />
+      ) : (
+        <DatePickerComponent date={date} onPickDate={d => setDate(d)} {...props} />
+      )}
+    </DialogContentContainer>
+  );
 };
 
 <Meta
@@ -44,18 +50,15 @@ export const datePickerTemplate = createComponentTemplate(DatePicker);
 
 ## Overview
 
-A simple and reusable Datepicker component 
+A simple and reusable Datepicker component
 
 <Canvas>
-  <Story name="Overview">
-    {datePickerTemplate.bind({})}
-  </Story>
+  <Story name="Overview">{datePickerTemplate.bind({})}</Story>
 </Canvas>
 
 ## Props
 
 <ArgsTable of={DatePickerComponent} />
-
 
 ## Variants
 
@@ -65,7 +68,7 @@ Allows users to select a single date
 
 <Canvas>
   <Story name="Single Day">
-    <DatePicker/>
+    <DatePicker />
   </Story>
 </Canvas>
 
@@ -75,18 +78,18 @@ Allows users to select a date range
 
 <Canvas>
   <Story name="Date Range">
-    <DatePicker range/>
+    <DatePicker range />
   </Story>
 </Canvas>
 
-
 ### Number of months
+
 <Canvas>
   <Story name="Number Of Months">
-    <DatePicker  numberOfMonths={2}/>
+    <DatePicker numberOfMonths={2} />
   </Story>
 </Canvas>
 
 ## Related components
 
-<RelatedComponents componentsNames={[TEXT_FIELD,DROPDOWN,DIALOG_CONTENT_CONTAINER]} />
+<RelatedComponents componentsNames={[TEXT_FIELD, DROPDOWN, DIALOG_CONTENT_CONTAINER]} />
