Refactor components animation using motion mixins.

--- a/src/components/Toast/__stories__/toast.stories.mdx
+++ b/src/components/Toast/__stories__/toast.stories.mdx
@@ -248,7 +248,7 @@ After a user has done an action, provide feedback to close the loop. For example
             type={Toast.types.POSITIVE}
             actions={actions}
             onClose={onCloseCallback}
-            autoHideDuration={5000}
+            autoHideDuration={50000000}
             className="monday-storybook-toast_box"
           >
             We successfully deleted 1 item
