--- a/src/components/Link/__stories__/Link.stories.mdx
+++ b/src/components/Link/__stories__/Link.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import Link from "../Link.jsx";
-import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook/functions/create-component-story";
+import Link from "../Link.tsx";
+import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
 import { ExternalPage, Gallery } from "../../Icon/Icons";
 import { BUTTON, CHIP, BREADCRUBMS } from "../../../storybook/components/related-components/component-description-map";
-import { Link as StorybookLink } from "../../../storybook/components";
+import { Link as StorybookLink } from "../../../storybook";
 import "./Link.stories.scss";
 
 export const metaSettings = createStoryMetaSettings({
@@ -33,7 +33,7 @@ export const linkTemplate = createComponentTemplate(Link);
 
 ## Overview
 
-Link is an actionable text componet with connection to another web pages.
+Link is an actionable text component with connection to another web pages.
 
 <Canvas>
   <Story name="Overview" args={{ text: "Read more", href: "https://www.monday.com" }}>
@@ -43,7 +43,7 @@ Link is an actionable text componet with connection to another web pages.
 
 ## Props
 
-<ArgsTable of={Link} />
+<ArgsTable story="Overview" />
 
 ## Usage
 
