--- a/src/components/Counter/__stories__/counter.stories.mdx
+++ b/src/components/Counter/__stories__/counter.stories.mdx
@@ -11,18 +11,18 @@ import "./counter.stories.scss";
 
 export const metaSettings = createStoryMetaSettings({
   component: Counter,
-  enumPropNamesArray: ["size", "color", "kind"]
+  enumPropNamesArray: ["size", "color", "kind", ]
 });
 
 <Meta
   title="Feedback/Counter"
-  component={Counter}
+  component={ Counter }
   argTypes={{
     ...metaSettings.argTypes,
     wrapperClassName: { table: { disable: true } },
     "data-testid": { table: { disable: true } }
-  }}
-  decorators={metaSettings.decorators}
+   }}
+  decorators={ metaSettings.decorators }
 />
 
 <!--- Component template -->
@@ -32,7 +32,6 @@ export const counterTemplate = createComponentTemplate(Counter);
 <!--- Component documentation -->
 
 # Counter
-
 - [Overview](#overview)
 - [Props](#props)
 - [Usage](#usage)
@@ -43,54 +42,29 @@ export const counterTemplate = createComponentTemplate(Counter);
 - [Feedback](#feedback)
 
 ## Overview
-
 Counters show the count of some adjacent data.
 
 <Canvas>
-  <Story name="Overview" args={{ count: 5 }}>
-    {counterTemplate.bind({})}
+  <Story name="Overview"
+         args={ {count: 5} }>
+    { counterTemplate.bind({}) }
   </Story>
 </Canvas>
 
 ## Props
-
 <ArgsTable story="Overview" />
 
 ## Usage
+<UsageGuidelines guidelines={[
+  "Counters are usually placed after the label of the item they're quantifying, such as the number of notifications. They should only be used to represent a number.",
+  <div className="monday-storybook-counter_usage-link-line">The element the counter refers to should include <Link href="/?path=/docs/popover-tooltip--overview" withoutSpacing>Tooltip,</Link> where necessary, to enhance user understanding. For example, a badge is used in conjunction with an icon.</div>,
+]}/>
 
-<UsageGuidelines
-  guidelines={[
-    "Counters are usually placed after the label of the item they're quantifying, such as the number of notifications. They should only be used to represent a number.",
-    <div className="monday-storybook-counter_usage-link-line">
-      The element the counter refers to should include{" "}
-      <Link href="/?path=/docs/popover-tooltip--overview" withoutSpacing>
-        Tooltip,
-      </Link>{" "}
-      where necessary, to enhance user understanding. For example, a badge is used in conjunction with an icon.
-    </div>
-  ]}
-/>
-
-<Tip title="Check yourself">
-  
-  Need to indicate information that is not numeric? Use the{" "}
- {" "}
-  <Link href="/?path=/docs/data-display-label--overview" size={Link.sizes.SMALL} withoutSpacing>
-    
-    Label
-  
-  </Link>{" "}
- {" "}
-  component instead.
-
-</Tip>
+<Tip title="Check yourself">Need to indicate information that is not numeric? Use the <Link href="/?path=/docs/data-display-label--overview" size={Link.sizes.SMALL} withoutSpacing>Label</Link> component instead.</Tip>
 
 ## Variants
-
 ### Sizes
-
 There are two sizes of counters
-
 <Canvas>
   <Story name="Sizes">
     <div className="storybook-counter_column">
@@ -105,7 +79,6 @@ There are two sizes of counters
 </Canvas>
 
 ### Colors
-
 <Canvas>
   <Story name="Colors">
     <div className="storybook-counter_column">
@@ -127,8 +100,7 @@ There are two sizes of counters
   </Story>
 </Canvas>
 
-### Outline
-
+### Outline 
 <Canvas>
   <Story name="Outline">
     <div className="storybook-counter_column">
@@ -141,7 +113,7 @@ There are two sizes of counters
     </div>
     <div className="storybook-counter_column">
       <Counter count={5} color={Counter.colors.DARK} kind={Counter.kinds.LINE} />
-      Dark
+       Dark
     </div>
     <div className="storybook-counter_column">
       <Counter count={5} color={Counter.colors.LIGHT} kind={Counter.kinds.LINE} />
@@ -150,8 +122,7 @@ There are two sizes of counters
   </Story>
 </Canvas>
 
-### Limits
-
+### Limits 
 <Canvas>
   <Story name="Limits">
     <div className="storybook-counter_column">
@@ -170,7 +141,6 @@ There are two sizes of counters
 </Canvas>
 
 ## Do’s and Don’ts
-
 <ComponentRules
   rules={[
     {
@@ -180,14 +150,7 @@ There are two sizes of counters
       },
       negative: {
         component: <Counter count="New" />,
-        description: (
-          <>
-            Don’t include any text. If you need a text label, use a{" "}
-            <Link href="/?path=/docs/data-display-label--overview" withoutSpacing>
-              Label.
-            </Link>
-          </>
-        )
+        description: <>Don’t include any text. If you need a text label, use a <Link href="/?path=/docs/data-display-label--overview" withoutSpacing>Label.</Link></>
       }
     },
     {
@@ -204,11 +167,8 @@ There are two sizes of counters
 />
 
 ## Use cases and examples
-
 ### Notification counter
-
 Used on the notification icon to indicate the number of new notifications.
-
 <Canvas>
   <Story name="Notification counter">
     {() => {
@@ -231,29 +191,27 @@ Used on the notification icon to indicate the number of new notifications.
       return (
         <div className="storybook-counter_position">
           <Avatar type={Avatar.types.ICON} icon={Notifications} backgroundColor={Avatar.colors.ROYAL} />
-          <Counter
-            count={count}
+          <Counter 
+            count={count} 
             maxDigits={1}
             color={Counter.colors.NEGATIVE}
             className="storybook-counter_counter-position-top"
           />
         </div>
-      );
+      )
     }}
   </Story>
 </Canvas>
 
 ### Counter on inbox filters
-
 The counter represents the number of items on each topic.
-
 <Canvas>
   <Story name="Counter on inbox filters">
     <div className="storybook-counter_wrapper">
       <span className="a">UX Writing & microcopy Re...</span>
       <span className="a"> Mobile Data- Iteration Plan...</span>
       <span className="a">Q Plans.</span>
-    </div>
+    </div> 
     <div className="storybook-counter_wrapper">
       <Counter count={195} color={Counter.colors.DARK} />
       <Counter count={141} color={Counter.colors.DARK} />
@@ -263,9 +221,7 @@ The counter represents the number of items on each topic.
 </Canvas>
 
 ### Count the number of updates
-
 The counter represents the number of items on each topic.
-
 <Canvas>
   <Story name="Count the number of updates">
     <div className="storybook-counter_icon-wrapper">
@@ -276,19 +232,13 @@ The counter represents the number of items on each topic.
         <Counter count={5} size={Counter.sizes.SMALL} className="storybook-counter_counter-position-bot" />
       </div>
       <div className="storybook-counter_line" />
-      <div className="storybook-counter_position">
+       <div className="storybook-counter_position">
         <Icon icon={Update} iconSize="36" />
-        <Counter
-          count={5}
-          color={Counter.colors.DARK}
-          size={Counter.sizes.SMALL}
-          className="storybook-counter_counter-position-bot"
-        />
+        <Counter count={5} color={Counter.colors.DARK} size={Counter.sizes.SMALL} className="storybook-counter_counter-position-bot" />
       </div>
     </div>
   </Story>
 </Canvas>
 
 ## Related components
-
-<RelatedComponents componentsNames={[LABEL, TOOLTIP, CHIP]} />
+<RelatedComponents componentsNames={[LABEL,TOOLTIP,CHIP]} />
