Migrate Counter component to TS. (#907)
* chore: Migrate Counter to TS.

* chore: Migrate Counter tests to TS

* fix: Stop addition of empty className properties when overrideClassName is empty.

* test: Update snapshot to reflect Counter correctly adding aria-label as string instead of number

* test: Update Counter snapshots

Removes empty className properties on output elements

* stories: Update prop sourcing and hide wrapperClassName

* stories: Update prop sourcing and hide extraneous props

* Apply suggestions from code review - Remove formatting changes

* refactor: use undefined directly as default value in backwardCompatibilityForProperties

--- a/src/components/Counter/__stories__/counter.stories.mdx
+++ b/src/components/Counter/__stories__/counter.stories.mdx
@@ -17,7 +17,11 @@ export const metaSettings = createStoryMetaSettings({
 <Meta
   title="Feedback/Counter"
   component={ Counter }
-  argTypes={ metaSettings.argTypes }
+  argTypes={{
+    ...metaSettings.argTypes,
+    wrapperClassName: { table: { disable: true } },
+    "data-testid": { table: { disable: true } }
+   }}
   decorators={ metaSettings.decorators }
 />
 
@@ -48,7 +52,7 @@ Counters show the count of some adjacent data.
 </Canvas>
 
 ## Props
-<ArgsTable of={ Counter } />
+<ArgsTable story="Overview" />
 
 ## Usage
 <UsageGuidelines guidelines={[
