--- a/src/components/Divider/__stories__/Divider.stories.mdx
+++ b/src/components/Divider/__stories__/Divider.stories.mdx
@@ -6,7 +6,7 @@ import classes from "./Divider.stories.module.scss";
 
 export const metaSettings = createStoryMetaSettings({
   component: Divider,
-  enumPropNamesArray: ["direction"]
+  enumPropNamesArray: ["directions"]
 });
 
 <Meta 
@@ -43,7 +43,7 @@ Divider create separation between two UI elements
 
 ## Props
 
-<ArgsTable of={Divider} />
+<ArgsTable story={"Overview"} />
 
 ## Variants
 
