revert: retain proptypes & fix propNameArray value

--- a/src/components/Divider/__stories__/Divider.stories.mdx
+++ b/src/components/Divider/__stories__/Divider.stories.mdx
@@ -6,7 +6,7 @@ import classes from "./Divider.stories.module.scss";
 
 export const metaSettings = createStoryMetaSettings({
   component: Divider,
-  enumPropNamesArray: ["directions"]
+  enumPropNamesArray: ["direction"]
 });
 
 <Meta 
