refactor: migrate Divider in typescript (#916)
* refactor: migrate Divider in typescript

- refactor Divider and DividerConstants
- refactor Divider jest test in typescript
- changed Divider story as per documentation

Related Issue #896

* revert: retain proptypes & fix propNameArray value

* refactor: relative import of VibeComponentProps

--- a/src/components/Divider/__stories__/Divider.stories.mdx
+++ b/src/components/Divider/__stories__/Divider.stories.mdx
@@ -43,7 +43,7 @@ Divider create separation between two UI elements
 
 ## Props
 
-<ArgsTable of={Divider} />
+<ArgsTable story={"Overview"} />
 
 ## Variants
 
