refactor: migrate Avatar to typescript

--- a/src/components/Avatar/__stories__/avatar.stories.mdx
+++ b/src/components/Avatar/__stories__/avatar.stories.mdx
@@ -71,7 +71,7 @@ Avatar is a graphical representation of a person through a profile picture, imag
 
 ## Props
 
-<ArgsTable of={Avatar} />
+<ArgsTable story={"Overview"} />
 
 ## Usage
 
