sotrybook build issue

--- a/src/components/Skeleton/__stories__/skeleton.stories.mdx
+++ b/src/components/Skeleton/__stories__/skeleton.stories.mdx
@@ -7,7 +7,7 @@ import {
   COUNTER,
   SPINNER
 } from "../../../storybook/components/related-components/component-description-map";
-import Avatar from "../../Avatar/Avatar.jsx";
+import Avatar from "../../Avatar/Avatar";
 import person from "./assets/person.png";
 import Button from "../../Button/Button";
 import { ThumbsUp, Replay } from "../../Icon/Icons";
