--- a/src/components/BreadcrumbsBar/__stories__/breadcrumbsBar.stories.mdx
+++ b/src/components/BreadcrumbsBar/__stories__/breadcrumbsBar.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import BreadcrumbsBar from "../BreadcrumbsBar";
 import BreadcrumbItem from "../BreadcrumbItem/BreadcrumbItem.jsx"
-import Avatar from "../../Avatar/Avatar.jsx"
+import Avatar from "../../Avatar/Avatar"
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
 import { Workspace, Folder, Board, Group } from "../../Icon/Icons";
 import person3 from "./assets/person3.png";
