refactor: migrate IconButton to typescript

--- a/src/components/IconButton/__stories__/IconButton.stories.mdx
+++ b/src/components/IconButton/__stories__/IconButton.stories.mdx
@@ -66,7 +66,7 @@ Icon button is a square button contains only icon with no visible text labels us
 </Canvas>
 
 ## Props
-<ArgsTable of={ IconButton } />
+<ArgsTable story={ "Overview" } />
 
 ## Usage
 <UsageGuidelines guidelines={[
